# cmpi-crash

./: CMakeLists.txt  COPYING  README
mof/: RCP_Crash.mof
registration/: RCP_Crash.reg  RCP_Crash.registration
src/: crash_provider.c
